# loki-cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  loki-cli.spec  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docker.yml  docs.yml
docs/: building.md  completion.md  configuration.md  docker.md  getting-started.md  index.md
docs/commands/: config.md  index.md  labels.md  login.md  logs.md  target.md
src/loki_cli/: __init__.py  __main__.py  cli.py  client.py  config.py
src/loki_cli/commands/: __init__.py  config.py  labels.py  login.py  logs.py
