[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loki-cli"
version = "0.1.0"
description = "A logcli-style CLI for querying Grafana Loki instances."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "loki-cli" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
loki-cli = "loki_cli.cli:main"

[project.urls]
Homepage = "https://github.com/bruno-laranjo/loki-cli"
Documentation = "https://bruno-laranjo.github.io/loki-cli/"
Repository = "https://github.com/bruno-laranjo/loki-cli"
Issues = "https://github.com/bruno-laranjo/loki-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
loki_cli = ["py.typed"]

# --- Ruff ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
    "B008",  # function-call in default argument (common with Click)
    "UP007", # keep Optional[X] / Union[X, Y] (py39 compat)
    "UP045", # same, for parameter annotations
    "SIM105",# try/except/pass with named exception is fine and readable
    "SIM108",# ternary suggestion — sometimes if/else reads better
    "RUF012",# mutable class defaults require typing.ClassVar
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # pytest uses `assert`

# --- Pytest -------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

